added fixes for russian layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -329,9 +329,9 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
             ${OPENSSL_ROOT}/lib/libcrypto.a
             z
         )
-    elseif (IS_DIRECTORY /usr/local/opt/openssl AND BREW_PROGRAM)
+    elseif (IS_DIRECTORY /opt/homebrew/opt/openssl@1.1/ AND BREW_PROGRAM)
         # brew
-        set (OPENSSL_ROOT /usr/local/opt/openssl)
+        set (OPENSSL_ROOT /opt/homebrew/opt/openssl@1.1/)
 
         include_directories (BEFORE SYSTEM ${OPENSSL_ROOT}/include)
 
